--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
     container_name: nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/ssl:/etc/nginx/ssl
+      - ./nginx/jenkins.conf:/etc/nginx/conf.d/jenkins.conf
+      - ./nginx/cert.pem:/etc/nginx/ssl/cert.pem
+      - ./nginx/key.pem:/etc/nginx/ssl/key.pem
     ports:
       - 80:80
       - 443:443
